[package]
name = "powernotd"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
directories = "5.0.0"
notify-rust = "4.8.0"
serde = {version =  "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
shell-words = "1.1.0"

[build-dependencies]
clap = { version = "4.2.1", features = ["derive"] }
clap_mangen = "0.2.10"
clap_complete = "4.2.1"
