[package]
name = "powernotd"
version = "1.2.0"
edition = "2021"
authors = ["laeri@laeri.me"]
readme = "README.md"
repository = "https://github.com/Laeri/powernotd"
homepage = "https://github.com/Laeri/powernotd"
license = "MIT"
keywords = ["battery", "notification", "daemon"]
categories = ["command-line-utilities"]
build = "build.rs"
publish = true
description = "Powernotd is a battery-level notification daemon that sends notification using the xdg desktop notification standard."
exclude = [
  "assets/powernotd_screenshot.png"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
directories = "5.0.1"
notify-rust = "4.11.0"
serde = {version =  "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
shell-words = "1.1.0"

[build-dependencies]
clap = { version = "4.5.7", features = ["derive"] }
clap_mangen = "0.2.21"
clap_complete = "4.5.5"
